# parquet-tool

./: .eslintrc.js  .gitignore  .npmignore  .releaserc.json  CHANGELOG.md  CMakeLists.txt  LICENSE  README.ja.md  README.md  README.zh-TW.md  docker-compose.yml  jest.config.ts  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
.husky/: prepare-commit-msg
docs/: README.ja.md  README.md  README.zh-TW.md  api.md  cli.md  examples.md  installation.md  overview.md
examples/: README.md  example.ts  package-lock.json  package.json  sample.parquet
examples/basic-read-write/: index.ts
examples/buffer-roundtrip/: index.ts
examples/conversions/: index.ts
examples/merge-and-validate/: index.ts
examples/split-and-parallel/: index.ts
scripts/: install.cjs  marked-compat.cjs
src/cli/: index.ts
src/lib/: arrow.ts  binding.ts  buffer.ts  conversion.ts  csv.ts  debug.ts  index.ts  json.ts  merge.ts  parallel.ts  reader.ts  rows.ts  schema.ts  splitter.ts  types.ts  validate.ts  writer.ts  xml.ts
src/native/: addon.cpp  parquet.h  thrift.h
tests/: append.test.ts  buffer.test.ts  cli.test.ts  features.test.ts  parallel.test.ts  roundtrip.test.ts  splitter.test.ts
viewer/: app.py  requirements.txt
viewer/templates/: index.html
